# DreamCatcher

./: .env.example  .gitignore  PRIVACY.md  Prompt.txt  README.md  TERMS.md  index.html  package-lock.json  package.json
docs/: oura-callback.html
scripts/: apply-dreamcatchericon.ps1  apply-iconimage-icon.ps1  make-dreamcatcher-icon.ps1  run-tauri-build.mjs  run-tauri-dev.mjs  run-tauri.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  config.rs  lib.rs  main.rs  oura.rs  storage.rs  types.rs
src/components/: AppShell.tsx  DashboardCalendar.tsx  DayCard.tsx  OuraConnectionStatus.tsx  SelectedSleepPanel.tsx  SleepTimeline.tsx  SourceModeToggle.tsx  WildSuggestionPanel.tsx
src/mocks/: mockSleepData.ts
src/services/: dataSource.ts  datetime.ts  ouraAdapter.ts  remExtraction.ts  sleepNormalizer.ts  suggestionHeuristic.ts  tauriBridge.ts
src/types/: app.ts  oura.ts
