[package]
name = "dreamcatcher"
version = "0.1.0"
edition = "2021"
description = "DreamCatcher desktop MVP"

[lib]
name = "dreamcatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
keyring = "3"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "=0.12.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "=3.11.0"
tauri = { version = "=2.0.0", features = [] }
tauri-codegen = "=2.0.0"
tauri-macros = "=2.0.0"
tauri-runtime = "=2.0.0"
tauri-runtime-wry = "=2.0.0"
tauri-utils = "=2.0.0"
time = "=0.3.36"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
webbrowser = "1"
